_scss/_general.scss
/* ... */
// Webpage structure
.wrapper {
  max-width: $page-max-width;
  margin: 0 auto;

  @include large {
    padding: 0 1rem;
  }

  @include medium {
    padding: 0 1rem;
  }

  @include small {
    padding: 0;
  }

  @include clearfix();
}

.page-header {
  @include large {
    padding: 1rem 0;
  }

  @include medium {
    padding: 1rem 0;
  }

  @include small {
    padding: .5rem;
  }

  .site-title-wrapper {
    float: left;
    width: auto;

    .site-title {
      display: flex;
      align-items: stretch;
      margin: 0;
      background-color: #feb800;
      border-radius: .2rem;
      font-weight: bold;
      line-height: 1;

      a.logotype {
        line-height: 0;

        @include large {
          padding: 1.2rem .5rem 0 1.2rem;
        }

        @include medium {
          padding: 1.05rem .2rem 1.05rem 1.05rem;
        }

        @include small {
          padding: .8rem;
        }

        img {
          @include large {
            height: 1.3rem;
          }

          @include medium {
            height: 1rem;
          }

          @include small {
            height: 1.4rem;
          }
        }

        transition: all 300ms ease-in-out;
      }

      a.title {
        font-family: $font-menu;
        font-weight: bold;
        text-decoration: none;
        white-space: nowrap;
        color: black;
        text-transform: uppercase;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;

        @include large {
          font-size: 1em;
          padding: 1.2rem 1.5rem 1.2rem .2rem;
        }

        @include medium {
          font-size: .8em;
          padding: 1rem 1rem 1rem .2rem;
        }

        @include small {
          display: none;
        }

        transition: all 400ms ease-in-out;
      }

      @include large {
        &:hover {
          background-color: transparent;

          a.logotype {
            transform: scale(2) translateX(-.2rem) rotate(-5deg);
            filter: blur(.0001px) invert(100%);
            -webkit-font-smoothing: antialiased;
          }

          a.title {
            transform: translateX(1rem);
            color: white;
            letter-spacing: .4rem;
            font-size: 1.1em;
          }
        }
      }

      transition: all 200ms ease-in-out;
    }
  }

  .main-navigation {
    float: right;
    text-align: right;

    @include large {
      width: 60%;

      ul {
        margin: 0;
        padding: 0;
        list-style: none;
        display: block;
        float: right;

        li {
          float: left;
          display: block;
          margin-left: .4rem;

          a {
            display: block;
            color: white;
            text-decoration: none;
            padding: 1.2rem 1.6rem;
            border-radius: .2rem;
            font-family: $font-menu;
            font-size: 1em;
            font-weight: bold;
            line-height: 1;
            text-transform: uppercase;
            letter-spacing: .1rem;

            &:hover {
              background-color: rgba(0,0,0,.3);
            }

            &.current {
              background-color: #4295f0;
              color: white;
            }
          }
        }

        @include clearfix();
      }
    }

    @include medium {
      width: 40%;

      ul {
        margin: 1rem 0 0;
        padding: 0;
        list-style: none;
        display: none;
        position: absolute;
        left: 0;
        right: 0;
        text-align: left;
        box-shadow: 0 .2rem 0 rgba(0, 0, 0, .2);

        li {
          background-color: #323740;

          a {
            display: block;
            padding: 1rem 2rem;;
            text-transform: uppercase;
            text-decoration: none;
            font-family: $font-menu;
            color: white;

            &:hover {
              background-color: #2D5A8B;
              color: white;
            }

            &.current {
              background-color: #4295f0;
              color: white;
            }
          }
        }
      }
    }

    @include small {
      width: 50%;

      ul {
        margin: .5rem 0 0;
        padding: 0;
        list-style: none;
        display: none;
        position: absolute;
        left: 0;
        right: 0;
        text-align: left;
        box-shadow: 0 .2rem 0 rgba(0, 0, 0, .2);
        z-index: 10;

        li {
          background-color: #323740;

          a {
            display: block;
            padding: 1rem 2rem;;
            text-transform: uppercase;
            text-decoration: none;
            font-family: $font-menu;
            color: white;

            &:hover {
              background-color: #2D5A8B;
              color: white;
            }

            &.current {
              background-color: #4295f0;
              color: white;
            }
          }
        }
      }
    }

    .main-navigation-button {
      padding: 1rem;
      border-radius: .2rem;
      font-family: $font-menu;
      font-weight: bold;
      line-height: 1;
      text-transform: uppercase;
      letter-spacing: .1rem;
      border: solid 1px white;
      cursor: pointer;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;

      @include large {
        display: none;
      }

      @include medium {
        display: inline-block;
        font-size: 1rem;
      }

      @include small {
        display: inline-block;
        font-size: .9rem;
      }

      &.active {
        background-color: white;
        color: black;
      }
    }
  }
}
/* ... */

